--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	     <h3><font FACE="bookman">Decision making experiment</font></h3>
 	     <p> This study is part of a research project conducted by Akshay Jagadish, Tankred Saanum, Marcel Binz, Jane Wang and Eric Schulz. </p>
 	     <p> If you have any questions, please contact: <strong>akshay.jagadish@tue.mpg.de</strong></p>
-	     <button type="button" name="button"; onclick="clickStart('page1','page2')"; >Continue</button>
+	     <button type="button" name="button"; onclick="clickStart('page1','page7')"; >Continue</button>
 	   </div>
 
 		<!--Second page contains Conscent form-->
@@ -223,7 +223,7 @@
 		   <div id="money"></div><br>
 		   <p>Thank you very much for participating in our study.</p>
 		   <p>Your Mechanical Turk Password is:<br> <b>compbandits</b></p><br>
-		   <p>In case you have any questions, please contact us via our MTurk account or write an email to<br> <b>ericschulz@fas.harvard.edu</b></p>
+		   <p>In case you have any questions, please contact us via our MTurk account or write an email to<br> <b>akshay.jagadish@tue.mpg.de</b></p>
 		</div>
 	</div>
     <script src="js/compositionalbandit.js" charset="utf-8"></script>
