--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	     <h3><font FACE="bookman">Decision making experiment</font></h3>
 	     <p> This study is part of a research project conducted by Akshay Jagadish, Tankred Saanum, Marcel Binz, Jane Wang and Eric Schulz. </p>
 	     <p> If you have any questions, please contact: <strong>akshay.jagadish@tue.mpg.de</strong></p>
-	     <button type="button" name="button"; onclick="clickStart('page1','page7')"; >Continue</button>
+	     <button type="button" name="button"; onclick="clickStart('page1','page2')"; >Continue</button>
 	   </div>
 
 		<!--Second page contains Conscent form-->
@@ -41,18 +41,18 @@
 			<p><b>Participation and withdrawal: </b>Your participation in this study is completely voluntary and you may refuse to participate or you may choose to withdraw at any time without penalty or loss of benefits to which you are otherwise entitled.</p>
 			<div style="margin-left:30px;margin-right:30px"> <p>The nature and purpose of this research have been sufficiently explained and I agree to participate in this study.  I understand that I am free to withdraw at any time without incurring any penalty.</p>
 			<p>Please consent by clicking the button below to continue. Otherwise, please exit the study at this time. </p>
-			<button type="button" name="button"; onclick="clickStart('page2','page3')"; >Agree</button>
+			<button type="button" name="button"; onclick="clickStart('page2','page4')"; >Agree</button>
 			</div>
 			<br><br>
 	    </div>
 
-	    <!--Third page contains MTurks details-->
+	    <!-- Third page contains MTurks details
 		<div id="page3" style="display:none">
 		   <br>
 		   <b> Please enter your Mechanical Turk Worker ID (required for bonus payment):</b><br>
 		   <input type="text" id="mturk" maxlength="20" value="WorkerID"><br><br>
 		   <button type="button" name="button"; onclick="gettingstarted()"; >Go to next page</button>
-		</div>
+		</div> -->
 
 
 		<!--Fourth page contains Overview-->
@@ -113,7 +113,7 @@
 				<p><b>Keyboard finger position:</b></p>
 					 <ul>
 					    <li>We kindly ask you to place your hands on the keyboard as shown in the picture below.</li>
-					    <li>Please use your left hand to select the options <b>A</b>, <b>S</b>, <b>D</b> or <b>F</b>. Use your right hand to select <b>J</b>, <b>K</b>, <b>L</b> or <b>;</b>.</li>
+					    <li>Please use your left hand to select the options <b>S</b>, <b>D</b> or <b>F</b>. Use your right hand to select <b>J</b>, <b>K</b> or <b>L</b>.</li>
 					    <li>Please use your left index finger to select <b>F</b>, and your right index finger to select <b>J</b>, and so forth.</li>
 					</ul>
 				<br>
