--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 			<p><b>Participation and withdrawal: </b>Your participation in this study is completely voluntary and you may refuse to participate or you may choose to withdraw at any time without penalty or loss of benefits to which you are otherwise entitled.</p>
 			<div style="margin-left:30px;margin-right:30px"> <p>The nature and purpose of this research have been sufficiently explained and I agree to participate in this study.  I understand that I am free to withdraw at any time without incurring any penalty.</p>
 			<p>Please consent by clicking the button below to continue. Otherwise, please exit the study at this time. </p>
+			
+			
 			<button type="button" name="button"; onclick="clickStart('page2','page4')"; >Agree</button>
 			</div>
 			<br><br>
@@ -217,6 +219,7 @@
 					What's your gender?<br>
 					<input id="gender" type="radio" name="gender" onclick="setgender(0)" >Female<br>
 					<input id="gender" type="radio" name="gender" onclick="setgender(1)" >Male<br>
+					<input id="gender" type="radio" name="gender" onclick="setgender(2)" >Diverse<br>
 				</div>
 				<div style="float:left;width:400px;margin:5px">Handedness?<br>
 					<input type="radio" name="handed" value="1" >Right<br>
